--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,1 +1,64 @@
-<h1>{{title}}</h1>
+<div class="col-lg-6">
+    <h1>{{title}}</h1>
+
+
+    <form #registerForm="ngForm"  class="col-xs-5">
+<p>
+    <Label>Nombre</Label>
+    <input type="text" name="name" #name="ngModel" [(ngModel)]="user.name" class="
+    form-control" required />
+    <span  *ngIf="!name.valid && name.touched">
+        El nombre es obligatorio!!
+    </span>
+
+</p>
+
+<p>
+    <Label>Apellidos</Label>
+    <input type="text" name="surname" #surname="ngModel" [(ngModel)]="user.surname" class="
+    form-control" required />
+    <span  *ngIf="!surname.valid && surname.touched">
+        Los apellidos son obligatorios!!
+    </span>
+
+</p>
+
+<p>
+    <Label>Apodo</Label>
+    <input type="text" name="nick" #nick="ngModel" [(ngModel)]="user.nick" class="
+    form-control" required />
+    <span  *ngIf="!nick.valid && nick.touched">
+        El apodo es obligatorio!!
+    </span>
+
+</p>
+<p>
+    <Label>Correo electrónico</Label>
+    <input type="email" name="email" #email="ngModel" [(ngModel)]="user.email" class="
+    form-control" required />
+    <span  *ngIf="!email.valid && email.touched">
+        El correo es obligatorio!!
+    </span>
+
+</p>
+<p>
+    <Label>Contraseña</Label>
+    <input type="password" name="password" #password="ngModel" [(ngModel)]="user.password" class="
+    form-control" required />
+    <span  *ngIf="!password.valid && password.touched">
+        La contraseña es obligatoria!!
+    </span>
+
+</p>
+
+<input type="submit" value="{{title}}" class="btn btn-success" [disabled]="
+!registerForm.form.valid" />
+    </form>
+
+
+
+
+
+
+</div>
+
