--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,8 +1,8 @@
-<div class="col-lg-6">
-    <h1>{{title}}</h1>
+<div class="col-lg-5">
+    <h1 class="h1-strong">{{title}}</h1>
 
 
-    <form #registerForm="ngForm"  class="col-xs-5">
+    <form #registerForm="ngForm"  (ngSubmit)="onSubmit()" class="col-xs-5">
 <p>
     <Label>Nombre</Label>
     <input type="text" name="name" #name="ngModel" [(ngModel)]="user.name" class="
@@ -35,9 +35,9 @@
 <p>
     <Label>Correo electrónico</Label>
     <input type="email" name="email" #email="ngModel" [(ngModel)]="user.email" class="
-    form-control" required />
+    form-control" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$"/>
     <span  *ngIf="!email.valid && email.touched">
-        El correo es obligatorio!!
+        El correo no es valido !!
     </span>
 
 </p>
