--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -1,3 +1,17 @@
+/*GENERALES*/
+
+.h1-strong{
+    font-size: 35px;
+    font-weight: bold;
+    margin-left: 13px;
+    margin-bottom: 20px;
+    padding-bottom: 15px;
+    border-bottom: 1px solid #eee;
+}
+
+
+
+
 /*HEADER*/
 
 .navigation{
